--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <canvas id="gameCanvas"></canvas>
-    <script src="script.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
