Added new levels logic

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="levelSelector">
+        <button onclick="selectLevel(1)">Level 1</button>
+        <button onclick="selectLevel(2)">Level 2</button>
+        <button onclick="selectLevel(3)">Level 3</button>
+    </div>
     <canvas id="gameCanvas"></canvas>
     <script type="module" src="main.js"></script>
 </body>
