Some visual improvements and bug fixes

--- a/index.html
+++ b/index.html
@@ -7,12 +7,39 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="levelSelector">
-        <button onclick="selectLevel(1)">Level 1</button>
-        <button onclick="selectLevel(2)">Level 2</button>
-        <button onclick="selectLevel(3)">Level 3</button>
+    <div id="container">
+        <div id="ui">
+            <div id="levelSelector">
+                <button onclick="selectLevel(1)">Level 1</button>
+                <button onclick="selectLevel(2)">Level 2</button>
+                <button onclick="selectLevel(3)">Level 3</button>
+            </div>
+            <div id="scoreBoard">
+                <div>Score: <span id="score">0</span></div>
+                <div>High Score: <span id="highScore">0</span></div>
+                <div id="newHighScoreMessage"></div>
+            </div>
+            <div id="powerUpBars">
+                <div class="powerUpBar">
+                    <label for="pierceBar">Pierce:</label>
+                    <div id="pierceBar" class="progressBar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+                <div class="powerUpBar">
+                    <label for="expandBar">Expand:</label>
+                    <div id="expandBar" class="progressBar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+            </div>
+            <div id="gameMessages"></div>
+        </div>
+        <div id="gameContainer">
+            <canvas id="gameCanvas"></canvas>
+            <button id="restartButton" onclick="restartGame()" style="display: none;">Restart</button>
+        </div>
     </div>
-    <canvas id="gameCanvas"></canvas>
     <script type="module" src="main.js"></script>
 </body>
 </html>
